--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<h1>Reserved</h1>
+<head>
+<meta http-equiv="refresh" content="0; URL=https://linkte.ee/skypawtv" />
+</head>
+
+<h1>Redirecting! Please wait!</h1>
