--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-<meta http-equiv="refresh" content="0; URL=https://linkte.ee/skypawtv" />
+<meta http-equiv="refresh" content="0; URL=https://linktr.ee/skypawtv" />
 </head>
 
 <h1>Redirecting! Please wait!</h1>
